--- a/PlaywrightTests/.github/workflows/playwright.yml
+++ b/PlaywrightTests/.github/workflows/playwright.yml
@@ -1,27 +1,43 @@
 name: Playwright Tests
+
 on:
   push:
-    branches: [ main, master ]
+    branches: [main]
   pull_request:
-    branches: [ main, master ]
+
 jobs:
   test:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
+
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: lts/*
-    - name: Install dependencies
-      run: npm ci
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test
-    - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: "4.8.x" # ← .NET Framework (nu Core)
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20"
+
+      - name: Restore NuGet packages
+        run: nuget restore WebsiteGym.sln
+
+      - name: Build the solution
+        run: msbuild WebsiteGym.sln /p:Configuration=Debug
+
+      - name: Start the web app
+        run: |
+          cd WebsiteGym.Web
+          start /B cmd /c "bin\Debug\WebsiteGym.Web.exe"
+          timeout /t 10
+
+      - name: Install Playwright and run tests
+        run: |
+          cd PlaywrightTests
+          npm ci
+          npx playwright install
+          npx playwright test
