--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,6 +1,7 @@
 name: Playwright Tests
 
 on:
+  workflow_dispatch: {}
   push:
     branches: [main]
   pull_request:
@@ -13,21 +14,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: "4.8.x" # ← .NET Framework (nu Core)
+      - name: Build solution with MSBuild
+        uses: microsoft/setup-msbuild@v1.1
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "20"
-
-      - name: Restore NuGet packages
-        run: nuget restore WebsiteGym.sln
-
-      - name: Build the solution
-        run: msbuild WebsiteGym.sln /p:Configuration=Debug
+      - run: msbuild WebsiteGym.sln /p:Configuration=Debug
 
       - name: Start the web app
         run: |
