--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -11,13 +11,7 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '8.0.x'
+      - uses: actions/checkout@v4
 
       - name: Setup NuGet
         uses: NuGet/setup-nuget@v1
@@ -26,15 +20,15 @@ jobs:
         run: nuget restore WebApp.sln
 
       - name: Build solution
-        run: dotnet build WebApp.sln --configuration Debug
+        run: msbuild WebApp.sln /p:Configuration=Debug
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      - name: Install Playwright deps
-        run: npm ci
+      - name: Install Playwright dependencies
+        run: npm install
         working-directory: PlaywrightTests
 
       - name: Install Playwright browsers
