--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,11 +19,17 @@ jobs:
       - name: Restore NuGet packages
         run: nuget restore WebApp.sln
 
+      - name: Check MSBuild.exe presence
+        shell: pwsh
+        run: |
+          Test-Path "C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Current\Bin\MSBuild.exe"
+
       - name: Build solution
+        shell: pwsh
         run: |
           & "C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Current\Bin\MSBuild.exe" WebApp.sln /p:Configuration=Debug
 
-
+      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
