--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,10 +20,20 @@ jobs:
       - name: Restore NuGet packages
         run: nuget restore WebApp.sln
 
+      - name: Locate MSBuild
+        id: msbuild
+        run: |
+            $msbuildPath = & "${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe" `
+            -latest -products * `
+            -requires Microsoft.Component.MSBuild `
+            -find MSBuild\**\Bin\MSBuild.exe
+            echo "MSBUILD=$msbuildPath" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+            shell: pwsh
+
       - name: Build solution with MSBuild
-        run: msbuild WebApp.sln /p:Configuration=Debug /t:Rebuild
-        env:
-          VSToolsPath: 'C:\Program Files (x86)\Microsoft Visual Studio\2022\Enterprise\MSBuild\Microsoft\VisualStudio\v17.0'
+        run: |
+          & "$env:MSBUILD" WebApp.sln /p:Configuration=Debug /t:Rebuild
+        shell: pwsh
 
       - name: Start IIS Express
         run: |
