--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,59 +1,56 @@
-name: Build and Run ASP.NET Website
+name: CI - Build & E2E Tests
 
 on:
   workflow_dispatch: {}
   push:
     branches: [ main ]
   pull_request:
+    branches: [ main ]
 
 jobs:
   build-and-test:
     runs-on: windows-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Setup NuGet
-        uses: NuGet/setup-nuget@v1
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '6.0.x'
 
       - name: Restore NuGet packages
         run: nuget restore WebApp.sln
 
-      - name: Locate MSBuild
-        id: msbuild
-        run: |
-            $msbuildPath = & "${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe" `
-            -latest -products * `
-            -requires Microsoft.Component.MSBuild `
-            -find MSBuild\**\Bin\MSBuild.exe
-            echo "MSBUILD=$msbuildPath" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-            shell: pwsh
-
-      - name: Build solution with MSBuild
-        run: |
-          & "$env:MSBUILD" WebApp.sln /p:Configuration=Debug /t:Rebuild
+      - name: Build Solution with MSBuild
         shell: pwsh
+        run: |
+          $msbuild = "C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Current\Bin\MSBuild.exe"
+          & "$msbuild" WebApp.sln /p:Configuration=Debug /t:Rebuild
+
+      - name: Install Playwright dependencies
+        run: npm ci
+
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
 
       - name: Start IIS Express
-        run: |
-          Start-Process "C:\Program Files\IIS Express\iisexpress.exe" `
-            -ArgumentList '/path:"WebsiteGym.Web"', '/port:44336' `
-            -NoNewWindow
         shell: pwsh
-
-      - name: Wait for website to start
         run: |
-          for ($i = 0; $i -lt 10; $i++) {
-            try {
-              $response = Invoke-WebRequest -Uri https://localhost:44336 -UseBasicParsing -SkipCertificateCheck
-              if ($response.StatusCode -eq 200) { break }
-            } catch {}
-            Start-Sleep -Seconds 3
-          }
+          $iisPath = "${env:ProgramFiles(x86)}\IIS Express\iisexpress.exe"
+          Start-Process $iisPath -ArgumentList '/path:"WebsiteGym.Web"', '/port:44336' -NoNewWindow
+          Start-Sleep -Seconds 10
 
-      - name: Run tests (Playwright or other)
+      - name: Run Playwright tests
+        run: npx playwright test --project=chromium
+
+      - name: Check IISExpress logs (optional debug)
+        shell: pwsh
         run: |
-          npm ci
-          npx playwright install
-          npx playwright test
+          Get-Content "$env:USERPROFILE\Documents\IISExpress\logs\trace.log" -ErrorAction SilentlyContinue
