add missing msbuild setup

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,17 +13,15 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '6.0.x'
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v1.1
 
       - name: Restore NuGet packages
         run: nuget restore WebApp.sln
@@ -35,7 +33,7 @@ jobs:
           & "$msbuild" WebApp.sln /p:Configuration=Debug /t:Rebuild
 
       - name: Install Playwright dependencies
-        run: npm ci
+        run: npm install
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
