--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -28,9 +28,7 @@ jobs:
 
       - name: Build Solution with MSBuild
         shell: pwsh
-        run: |
-          $msbuild = "C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Current\Bin\MSBuild.exe"
-          & "$msbuild" WebApp.sln /p:Configuration=Debug /t:Rebuild
+        run: msbuild WebApp.sln /p:Configuration=Debug
 
       - name: Install Playwright dependencies
         run: npm install
