--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -38,47 +38,43 @@ jobs:
         run: npx playwright install --with-deps
         working-directory: PlaywrightTests
 
-      - name: Start IIS Express
+      - name: Start IIS Express with config
         shell: pwsh
         run: |
           $iisPath = "${env:ProgramFiles(x86)}\IIS Express\iisexpress.exe"
           $webProjectPath = "$env:GITHUB_WORKSPACE\WebsiteGym.Web"
-          $stdoutPath = "$env:GITHUB_WORKSPACE\iis_stdout.log"
-          $stderrPath = "$env:GITHUB_WORKSPACE\iis_stderr.log"
+          $configTemplate = "$env:GITHUB_WORKSPACE\iisconfig\applicationhost.config"
+          $configActual = "$env:GITHUB_WORKSPACE\iisconfig\actual.config"
 
-          $proc = Start-Process -FilePath $iisPath `
-            -ArgumentList "/path:`"$webProjectPath`"", "/port:44336" `
-            -RedirectStandardOutput $stdoutPath `
-            -RedirectStandardError $stderrPath `
-            -PassThru
+          # Înlocuiește C:\site cu path-ul real
+          (Get-Content $configTemplate) -replace 'C:\\site', $webProjectPath | Set-Content $configActual
 
-          Start-Sleep -Seconds 3
-          Write-Host "✅ Started IIS Express with PID $($proc.Id)"
+          Start-Process -FilePath $iisPath `
+            -ArgumentList "/config:$configActual", "/site:WebsiteGym.Web", "/trace:error" `
+            -NoNewWindow
 
-          Write-Host "📄 IIS Express stdout (last 30 lines):"
-          Get-Content $stdoutPath -Tail 30
+          Start-Sleep -Seconds 5
 
-          Write-Host "📄 IIS Express stderr (last 30 lines):"
-          Get-Content $stderrPath -Tail 30
-
-      - name: Wait for IIS site to be available
+      - name: Wait for port to open
         shell: pwsh
         run: |
-          $maxRetries = 15
-          $success = $false
-          for ($i = 1; $i -le $maxRetries; $i++) {
-            $result = Test-NetConnection -ComputerName localhost -Port 44336
+          $port = 44336
+          $retries = 15
+          $ok = $false
+
+          for ($i = 1; $i -le $retries; $i++) {
+            Write-Host "⏳ Checking port $port... attempt $i of $retries"
+            $result = Test-NetConnection -ComputerName "localhost" -Port $port
             if ($result.TcpTestSucceeded) {
-              Write-Host "✅ Port 44336 is open!"
-              $success = $true
+              Write-Host "✅ Port $port is open!"
+              $ok = $true
               break
-            } else {
-              Write-Host "❌ Port not open yet, retrying... attempt $i of $maxRetries"
-              Start-Sleep -Seconds 3
             }
+            Start-Sleep -Seconds 2
           }
-          if (-not $success) {
-            Write-Error "❌ Port 44336 is NOT open after $maxRetries attempts"
+
+          if (-not $ok) {
+            Write-Error "❌ Port $port is NOT open after $retries attempts"
             exit 1
           }
 
@@ -94,13 +90,14 @@ jobs:
           path: PlaywrightTests/playwright-report
 
       - name: Stop IIS Express
-        if: always()
         shell: pwsh
         run: |
-          $pid = ${{ steps.start_iis.outputs.iis_pid }}
-          if ($pid) {
-            Write-Host "Stopping IIS Express with PID $pid"
-            Stop-Process -Id $pid -Force
+          $iisPath = "${env:ProgramFiles(x86)}\IIS Express\iisexpress.exe"
+          $processes = Get-Process -Name iisexpress -ErrorAction Silent
+          if ($processes) {
+            Write-Host "Stopping IIS Express..."
+            Stop-Process -Name iisexpress -Force
+            Write-Host "IIS Express stopped."
           } else {
-            Write-Host "No IIS Express PID found, nothing to stop"
+            Write-Host "IIS Express is not running."
           }
