--- a/iisconfig/applicationhost.config
+++ b/iisconfig/applicationhost.config
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<configuration>
+<configuration xmlns="urn:schemas-microsoft-com:asm.v1">
+  <configSections>
+    <section name="system.applicationHost"
+             overrideModeDefault="Allow"
+             type="Microsoft.Web.Administration.ConfigurationSection, Microsoft.Web.Administration, Version=7.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+             allowDefinition="MachineToApplication" />
+  </configSections>
+
   <system.applicationHost>
     <sites>
       <site name="WebsiteGym.Web" id="1">
@@ -10,9 +17,6 @@
           <binding protocol="http" bindingInformation="*:44336:localhost" />
         </bindings>
       </site>
-      <siteDefaults>
-        <logFile logFormat="W3C" directory="%IIS_USER_HOME%\Logs" />
-      </siteDefaults>
     </sites>
     <applicationPools>
       <add name="Clr4IntegratedAppPool" managedRuntimeVersion="v4.0" />
