--- a/iisconfig/applicationhost.config
+++ b/iisconfig/applicationhost.config
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<configuration xmlns="urn:schemas-microsoft-com:asm.v1">
+<configuration>
   <configSections>
     <section name="system.applicationHost"
              overrideModeDefault="Allow"
              type="Microsoft.Web.Administration.ConfigurationSection, Microsoft.Web.Administration, Version=7.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-             allowDefinition="MachineToApplication" />
+             allowDefinition="MachineToApplication"/>
   </configSections>
 
   <system.applicationHost>
